--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "sequelize": "^6.32.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^2.0.22"
   }
